# ansible-role-bootstrap

./: .ansible-lint  .gitignore  .pre-commit-config.yaml  .yamllint  README.md  pyproject.toml  requirements.yml  tox.ini
.github/workflows/: ansible_master.yml  ansible_testing.yml  galaxy.yml
defaults/: main.yml
files/: python_req.txt
handlers/: main.yml
meta/: main.yml
molecule/bootstrap/: prepare.yml
molecule/default/: converge.yml  molecule.yml  prepare.yml  verify.yml
tasks/: bootstrap_assert.yml  bootstrap_base.yml  bootstrap_hc_utils.yml  bootstrap_pip.yml  disable_ipv6.yml  hcloud_facts.yml  main.yml  rsyslog.yml
templates/: 00-rsyslog-iptables.j2  legacy_rsyslog.conf.j2
vars/: main.yml
