[tool.poetry]
name = "ansible-role-bootstrap"
version = "1.0.0"
description = ""
authors = ["Julian Psotta <julianpsotta@gmail.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = ">=3.6.1,<4.0"
pip = ">=21.0.1"
ansible = "^4.8.0"
Jinja2 = "^3.0.2"
molecule = {extras = ["docker"], version = "^3.5.2"}
cryptography = "^35.0.0"
shade = "^1.33.0"
docker = "^5.0.3"
ansible-lint = "^5.3.2"
flake8 = "^4.0.1"
tox = "^3.24.4"
pre-commit = "^2.15.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.15.0"
yamllint = "^1.26.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
